--- a/styleForExpense.css
+++ b/styleForExpense.css
@@ -43,36 +43,6 @@ nav a {
     text-decoration: none;
 }
 
-.hero {
-    text-align: center;
-    margin-top: 5rem;
-}
-
-.hero h2 {
-    font-size: 3rem;
-}
-
-.hero p {
-    margin-top: 1rem;
-    font-size: 1.2rem;
-    color: rgb(77, 77, 77);
-}
-
-.cta {
-    display: inline-block;
-    margin-top: 1rem;
-    padding: 1rem 2rem;
-    background-color: rgb(100, 16, 16);
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 4px;
-}
-
-.cta:hover {
-    background-color: rgb(138, 16, 16);
-}
-
 footer {
     background-color: #250d0d;
     color: rgb(218, 218, 218);
@@ -82,4 +52,21 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+}
+.input_table {
+    font-size: 1.2rem;
+    text-align: center;
+    margin: auto;
+}
+td{
+    height: 40px;
+}
+#submit {
+    background-color: rgb(100, 16, 16);
+    color:#fff;
+    height: 40px;
+    width: 80px;
+}
+#submit:hover {
+    background-color: rgb(138, 16, 16);
 }
