draw chart, report and main js file updated

--- a/styleForReport.css
+++ b/styleForReport.css
@@ -75,3 +75,9 @@ td{
     margin: auto;
     font-size: 1.2rem;
 }
+#chartContainer {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    text-align: center;
+}
