--- a/styleForTransaction.css
+++ b/styleForTransaction.css
@@ -4,8 +4,8 @@ body{
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100%;
 }
 h1, h2, p {
     margin: 0;
@@ -22,32 +22,38 @@ header {
     background-color: #250d0d;
     color: #fff;
     padding: 1rem;
+    position: sticky;
+    
 }
 
 header h1 {
     font-size: 2rem;
+    position: sticky;
 }
 
 nav ul {
     list-style-type: none;
     margin-top: 1rem;
+    position: sticky;
 }
 
 nav li {
     display: inline;
     margin-right: 1rem;
+    position: sticky;
 }
 
 nav a {
     color: #fff;
     text-decoration: none;
+    position: sticky;
 }
 footer {
     background-color: #250d0d;
     color: rgb(218, 218, 218);
     padding: 1rem;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -63,6 +69,7 @@ footer {
     color:#fff;
     height: 40px;
     width: 100px;
+    position: sticky;
 }
 .view_button:hover {
     background-color: rgb(138, 16, 16);
