--- a/styleForReport.css
+++ b/styleForReport.css
@@ -73,11 +73,12 @@ td{
 #text1 {
     text-align: center;
     margin: auto;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
+    color: rgb(70, 70, 70);
 }
 #chartContainer {
-    width: 50px;
-    height: 50px;
+    width: 0px;
+    height: 0px;
     margin: 0 auto;
     text-align: center;
 }
