--- a/styleForTransaction.css
+++ b/styleForTransaction.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    min-width: 100%;
+    min-width: 100vh;
 }
 h1, h2, p {
     margin: 0;
@@ -78,4 +78,18 @@ footer {
     text-align: center;
     margin: auto;
     font-size: 1.2rem;
+}
+td{
+    min-height: 20vh;
+    min-width: 20vh;
+    max-height: 20vh;
+    max-width: 30vw;
+    border: 1px solid rgba(51, 51, 51, 0.6);
+    background-color: rgba(220, 220, 220, 0.15);
+}
+table{
+    margin:0 auto;
+    border-collapse: collapse;
+    border-spacing: 0;
+    
 }
