--- a/styleForTransaction.css
+++ b/styleForTransaction.css
@@ -6,47 +6,38 @@ body{
     padding: 0;
     min-height: 100vh;
     min-width: 100vh;
+    font-family: Arial, sans-serif;
+    color: #333;
 }
 h1, h2, p {
     margin: 0;
     padding: 0;
 }
 
-/* Basic styling for the page */
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
-}
-
 header {
     background-color: #250d0d;
     color: #fff;
     padding: 1rem;
-    position: sticky;
     
 }
 
 header h1 {
     font-size: 2rem;
-    position: sticky;
 }
 
 nav ul {
     list-style-type: none;
     margin-top: 1rem;
-    position: sticky;
 }
 
 nav li {
     display: inline;
     margin-right: 1rem;
-    position: sticky;
 }
 
 nav a {
     color: #fff;
     text-decoration: none;
-    position: sticky;
 }
 footer {
     background-color: #250d0d;
@@ -67,9 +58,8 @@ footer {
 .view_button {
     background-color: rgb(100, 16, 16);
     color:#fff;
-    height: 40px;
-    width: 100px;
-    position: sticky;
+    height: 6.5vh;
+    width: 8vw;
 }
 .view_button:hover {
     background-color: rgb(138, 16, 16);
@@ -91,5 +81,4 @@ table{
     margin:0 auto;
     border-collapse: collapse;
     border-spacing: 0;
-    
 }
