--- a/styleForProfile.css
+++ b/styleForProfile.css
@@ -6,17 +6,14 @@ body{
     padding: 0;
     height: 100vh;
     width: 100vw;
+    font-family: Arial, sans-serif;
+    color: #333;
 }
 h1, h2, p {
     margin: 0;
     padding: 0;
 }
 
-/* Basic styling for the page */
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
-}
 
 header {
     background-color: #250d0d;
@@ -52,4 +49,30 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+}
+.input_table {
+    font-size: 1.2rem;
+    text-align: center;
+    margin: auto;
+}
+td{
+    height: 40px;
+}
+#submit {
+    background-color: rgb(100, 16, 16);
+    color:#fff;
+    height: 40px;
+    width: 80px;
+}
+#submit:hover {
+    background-color: rgb(138, 16, 16);
+}
+#text5{
+    font-size: 1.3rem;
+    text-align: center;
+    color: rgb(70, 70, 70);
+}
+#text6{
+    text-align: center;
+    color: rgb(220, 0, 0);
 }
