--- a/styleForTransaction.css
+++ b/styleForTransaction.css
@@ -8,40 +8,31 @@ body {
     font-family: Arial, sans-serif;
     color: #333;
 }
-
-h1,
-h2,
-p {
+h1,h2,p {
     margin: 0;
     padding: 0;
 }
-
 header {
     background-color: #250d0d;
     color: #fff;
     padding: 1rem;
 
 }
-
 header h1 {
     font-size: 2rem;
 }
-
 nav ul {
     list-style-type: none;
     margin-top: 1rem;
 }
-
 nav li {
     display: inline;
     margin-right: 1rem;
 }
-
 nav a {
     color: #fff;
     text-decoration: none;
 }
-
 footer {
     background-color: #250d0d;
     color: rgb(218, 218, 218);
@@ -60,10 +51,10 @@ footer {
     font-size: 1.2rem;
 }
 
-#text2 {
+#text2,#text3 {
     text-align: center;
     margin: auto;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
 }
 
 td {
