--- a/style.css
+++ b/style.css
@@ -32,31 +32,6 @@ nav a {
     color: #fff;
     text-decoration: none;
 }
-.hero {
-    text-align: center;
-    margin-top: 5rem;
-}
-.hero h2 {
-    font-size: 3rem;
-}
-.hero p {
-    margin-top: 1rem;
-    font-size: 1.2rem;
-    color: rgb(77, 77, 77);
-}
-.cta {
-    display: inline-block;
-    margin-top: 1rem;
-    padding: 1rem 2rem;
-    background-color: rgb(100, 16, 16);
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 4px;
-}
-.cta:hover {
-    background-color: rgb(138, 16, 16);
-}
 footer {
     background-color: #250d0d;
     color: rgb(218, 218, 218);
@@ -66,4 +41,28 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+.main{
+    text-align: center;
+    margin: auto;
+}
+h2 {
+    font-size: 3rem;
+    color: rgb(25, 25, 25);
+}
+.h3 {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    color: rgb(70, 70, 70);
+}
+.btn{
+    background-color: rgb(100, 16, 16);
+    color:#fff;
+    height: 8vh;
+    width: 8vw;
+    font-size: 0.9rem;
+}
+.btn:hover {
+    background-color: rgb(138, 16, 16);
 }
