changed profile button

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h2 {
 }
 .btn{
     background-color: rgb(100, 16, 16);
-    color:#fff;
+    color:rgb(219, 219, 219);
     height: 8vh;
     width: 8vw;
     font-size: 0.9rem;
