--- a/styleForHelp.css
+++ b/styleForHelp.css
@@ -1,51 +1,67 @@
-/* Reset default margin and padding */
-body{
+body {
     background-image: linear-gradient(to bottom right, rgb(150, 50, 250), rgb(206, 182, 102), rgb(185, 90, 77), rgb(50, 150, 200));
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vh;
     font-family: Arial, sans-serif;
     color: #333;
 }
-h1, h2, p {
+h1,h2,p {
     margin: 0;
     padding: 0;
 }
-
 header {
     background-color: #250d0d;
     color: #fff;
     padding: 1rem;
-}
 
+}
 header h1 {
     font-size: 2rem;
 }
-
 nav ul {
     list-style-type: none;
     margin-top: 1rem;
 }
-
 nav li {
     display: inline;
     margin-right: 1rem;
 }
-
 nav a {
     color: #fff;
     text-decoration: none;
 }
-
 footer {
     background-color: #250d0d;
     color: rgb(218, 218, 218);
     padding: 1rem;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+}
+.main {
+    text-align: center;
+    margin: auto;
+    font-size: 0.9rem;
+}
+
+.headings {
+    background-color: rgba(168, 33, 33, 0.301);
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: .5%;
+}
+
+.elements {
+    text-align: justify;
+    margin-left: 20%;
+    margin-right: 20%;
+    word-spacing: 4px;
 }
