--- a/styleForHelp.css
+++ b/styleForHelp.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    min-width: 100vh;
+    max-width: 100vh;
     font-family: Arial, sans-serif;
     color: #333;
 }
@@ -54,14 +54,14 @@ footer {
     font-size: 1.2rem;
     margin-top: 10px;
     margin-bottom: 5px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 15%;
+    margin-right: 15%;
     padding: .5%;
 }
 
 .elements {
     text-align: justify;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 15%;
+    margin-right: 15%;
     word-spacing: 4px;
 }
