--- a/styleForReport.css
+++ b/styleForReport.css
@@ -1,4 +1,3 @@
-/* Reset default margin and padding */
 body{
     background-image: linear-gradient(to bottom right, rgb(150, 50, 250), rgb(206, 182, 102), rgb(185, 90, 77), rgb(50, 150, 200));
     background-repeat: no-repeat;
@@ -6,38 +5,29 @@ body{
     padding: 0;
     height: 100vh;
     width: 100vw;
+    font-family: Arial, sans-serif;
+    color: #333;
 }
 h1, h2, p {
     margin: 0;
     padding: 0;
 }
-
-/* Basic styling for the page */
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
-}
-
 header {
     background-color: #250d0d;
     color: #fff;
     padding: 1rem;
 }
-
 header h1 {
     font-size: 2rem;
 }
-
 nav ul {
     list-style-type: none;
     margin-top: 1rem;
 }
-
 nav li {
     display: inline;
     margin-right: 1rem;
 }
-
 nav a {
     color: #fff;
     text-decoration: none;
@@ -52,13 +42,10 @@ footer {
     left: 0;
     right: 0;
 }
-.output_table {
+.chart_buttons {
     text-align: center;
     margin: auto;
     font-size: 1.2rem;
-}
-td{
-    height: 20%;
     padding: 3%;
 }
 .view_button {
@@ -70,15 +57,21 @@ td{
 .view_button:hover {
     background-color: rgb(138, 16, 16);
 }
-#text1 {
+#text2 {
     text-align: center;
     margin: auto;
     font-size: 0.9rem;
     color: rgb(70, 70, 70);
 }
+#text1 {
+    text-align: center;
+    margin: auto;
+    font-size: 0.8rem;
+    color: rgb(70, 70, 70);
+}
 #chartContainer {
-    width: 0px;
-    height: 0px;
+    height: 250px;
+    width: 300px;
     margin: 0 auto;
     text-align: center;
 }
