--- a/styleForTransaction.css
+++ b/styleForTransaction.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    min-width: 100vh;
+    max-width: 100vh;
     font-family: Arial, sans-serif;
     color: #333;
 }
@@ -78,8 +78,8 @@ table {
 .dropbtn {
     background-color: rgb(100, 16, 16);
     color: #fff;
-    height: 6.5vh;
-    width: 10vw;
+    height: 50px;
+    width: 110px;
     font-size: 0.9rem;
     cursor: pointer;
 }
