--- a/styleForDeletTransection.css
+++ b/styleForDeletTransection.css
@@ -44,7 +44,7 @@ footer {
     color: rgb(218, 218, 218);
     padding: 1rem;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
