--- a/styleForExpense.css
+++ b/styleForExpense.css
@@ -1,4 +1,3 @@
-/* Reset default margin and padding */
 body{
     background-image: linear-gradient(to bottom right, rgb(150, 50, 250), rgb(206, 182, 102), rgb(185, 90, 77), rgb(50, 150, 200));
     background-repeat: no-repeat;
@@ -6,16 +5,12 @@ body{
     padding: 0;
     height: 100vh;
     width: 100vw;
+    font-family: Arial, sans-serif;
+    color: #333;
 }
 h1, h2, p {
     margin: 0;
     padding: 0;
-}
-
-/* Basic styling for the page */
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
 }
 
 header {
@@ -48,7 +43,7 @@ footer {
     color: rgb(218, 218, 218);
     padding: 1rem;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
