--- a/styleForReport.css
+++ b/styleForReport.css
@@ -37,7 +37,7 @@ footer {
     color: rgb(218, 218, 218);
     padding: 1rem;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -46,13 +46,13 @@ footer {
     text-align: center;
     margin: auto;
     font-size: 1.2rem;
-    padding: 3%;
+    padding: 2%;
 }
 .view_button {
     background-color: rgb(100, 16, 16);
     color:#fff;
     height: 40px;
-    width: 100px;
+    width: 80px;
 }
 .view_button:hover {
     background-color: rgb(138, 16, 16);
