--- a/styleForTransaction.css
+++ b/styleForTransaction.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    max-width: 100vh;
+    max-width: 100vw;
     font-family: Arial, sans-serif;
     color: #333;
 }
