--- a/styleForProfile.css
+++ b/styleForProfile.css
@@ -66,7 +66,7 @@ td{
 #submit:hover {
     background-color: rgb(138, 16, 16);
 }
-#text5{
+.text5{
     font-size: 1.3rem;
     text-align: center;
     color: rgb(70, 70, 70);
