addExpense page design updated

--- a/styleForExpense.css
+++ b/styleForExpense.css
@@ -49,12 +49,14 @@ footer {
     right: 0;
 }
 .input_table {
-    font-size: 1.2rem;
+    font-size: 1.0rem;
     text-align: center;
     margin: auto;
 }
 td{
     height: 40px;
+    min-width: 80px;
+    max-width: 250px;
 }
 #submit {
     background-color: rgb(100, 16, 16);
@@ -75,4 +77,7 @@ td{
     margin: auto;
     font-size: 0.9rem;
     color: red;
+}
+.radio_options{
+    font-size: 0.8rem;
 }
